2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.7 ===

2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* gmountoperation.[hc]: Add an "aborted" signal to abort a
	mount operation from the backend side.

	* gvolume.h: Add docs regarding the "aborted" signal.

2009-02-13  Ryan Lortie  <desrt@desrt.ca>

	Bug 505042 – add file attribute for actually used file size in bytes

	* gfileinfo.h: add G_FILE_ATTRIBUTE_STANDARD_ALLOCATED_SIZE define to
	"standard::allocated-size"
	* gfileattribute.c: document
	* glocalfileinfo.c: set the allocated size from st_blocks * 512

2009-02-16  Ryan Lortie  <desrt@desrt.ca>

	Bug 571598 – GAsyncResult with NULL gobject

	* gsimpleasyncresult.c: remove various assertions and add some checks
	to allow for a NULL source_object in GSimpleAsyncResult.

2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 541225 – Can't compile gio on AIX : duplicate case value in 
	gioerror.c

	* gioerror.c (g_io_error_from_errno): Cope with EEXIST == ENOTEMPTY. 
	Reported by Nicolas Joseph 

2009-02-04  Alexander Larsson  <alexl@redhat.com>

	Bug 566747 - URIs opened with firefox %u load as local files

	* gdummyfile.c (g_dummy_file_get_path):
	Dummy files are never used for local paths, so always return NULL
	in get_path(). 

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.6 ===

2009-01-31  Paolo Borelli  <pborelli@katamail.com>

	* glocalfileinfo.c: plug a tiny mem leak.

2009-01-29  Ryan Lortie  <desrt@desrt.ca>

	* gioerror.c (g_io_error_from_errno): handle all possible cases of
	EAGAIN and EWOULDBLOCK being (un)defined and (un)equal.

2009-01-28  Ryan Lortie  <desrt@desrt.ca>

	Bug 568575 – _async functions for GDataInputStream

	* gdatainputstream.h:
	* gdatainputstream.c: add _async versions of read_line and read_until.
	* gio.symbols:
	* ../docs/reference/gio/gio-sections.txt: add new functions
	* tests/sleepy-stream.c: new test case for async read line
	* tests/Makefile.am: add new test
